--- a/src/input.css
+++ b/src/input.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+body{
+    font-family: "Inter", sans-serif;
+}
 .main__herotext{
     font-family: "Bebas Neue", sans-serif;
     font-weight: 800;
@@ -14,6 +18,7 @@
     --color-shadow-black: #000000;
     --color-shadow-white: #404040a1 ;
     --color-cards:#E0E0E0;
+    --color-green:#07BA05;
 }
 .light{
     --color-primary:#DBDBDB;
@@ -23,6 +28,7 @@
     --color-shadow-black: #00000026;
     --color-shadow-white: #ffffff;
     --color-cards:#E0E0E0;
+    --color-green:#07BA05;
 }
 .container-shadow{
     box-shadow: 
@@ -39,9 +45,79 @@
     inset -2px -2px 2px 0px var(--color-shadow-white), 
     inset 2px 2px 2px 0px var(--color-shadow-black);
 }
+.main-icon{
+    box-shadow:
+    inset -2px -2px 2px 0px var(--color-shadow-black),
+    inset 2px 2px 2px 0px var(--color-shadow-white);
+}
 .humburger__top{
     transform: rotate(45deg) translate(3px ,3px);
 }
 .humburger__bottom{
     transform: rotate(-45deg) translate(3px ,-3px);
+}
+.prevPic{
+    height: 39px;
+    width: 60px;
+    grid-row: 1/2;
+}
+.activePic{
+    aspect-ratio: 3/2;
+    grid-row: 2/3;
+}
+.nextPic{
+    height: 39px;
+    width: 60px;
+    grid-row: 3/4;
+    justify-self: end;
+}
+.btn-wrapper {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    }
+
+    .btn-text {
+    position: relative;
+    display: inline-block;
+    transition: transform 0.6s ease;
+}
+.btn-bg::before {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: top 0.6s ease;
+    z-index: 0;
+}
+.btn-wrapper:hover .btn-bg::before {
+    top: 0;
+}
+
+.btn-wrapper:hover .btn-text {
+    transform: translateY(-150%);
+}
+@keyframes circle {
+    75%, 100% {
+    transform: scale(2.5);
+    opacity: 0;
+    }
+}
+.Animate {
+    animation: circle 2s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+.load {
+    animation: load 0.5s ease-in-out forwards;
+}
+@keyframes load {
+    from{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
